--- a/style.css
+++ b/style.css
@@ -28,13 +28,12 @@ h1 {
   margin-bottom: 20px;
 }
 
-.button {
-  padding: 18px 36px;
-  font-size: 22px;
-  border: none;
-  border-radius: 14px;
-  cursor: pointer;
+.buttons {
+  position: relative;
+  height: 200px;
+  margin-top: 20px;
 }
+
 
 
 .final-text {
