--- a/style.css
+++ b/style.css
@@ -34,12 +34,9 @@ h1 {
   margin-top: 20px;
 }
 
-
-
 .final-text {
   margin-top: 15px;
   font-size: 20px;
   color: #6c757d;
-}
-
+  font-style: italic;
 }
