--- a/style.css
+++ b/style.css
@@ -30,8 +30,19 @@ h1 {
 
 .buttons {
   position: relative;
-  height: 200px;
-  margin-top: 20px;
+  height: 220px;
+  margin-top: 30px;
+}
+
+#yesBtn {
+  position: relative;
+  z-index: 2;
+}
+
+#noBtn {
+  position: absolute;
+  left: 160px;
+  top: 110px;
 }
 
 .final-text {
