--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
 
 .container {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 .hidden {
